added project to dropdown

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
                 Projects
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Coming</a></li>
-                <li><a class="dropdown-item" href="#">Soon</a></li>
+                <li><a class="dropdown-item" href="https://jlutrario.github.io/cookies4L8r/">cookies4L8r</a></li>
               </ul>
             </li>
           </ul>
