--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                 <li><a class="dropdown-item" href="https://jlutrario.github.io/cookies4L8r/">cookies4L8r</a></li>
               </ul>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://github.com/jlutrario">GitHub</a>
+            </li>
           </ul>
         </div>
       </div>
