--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" href="https://jlutrario.github.io/cookies4L8r/">cookies4L8r</a></li>
+                <li><a class="dropdown-item" href="https://jlutrario.github.io/WelcomeHome/">Welcome Home</a></li>
               </ul>
             </li>
             <li class="nav-item">
